--- a/templates/account/signup.html
+++ b/templates/account/signup.html
@@ -1,21 +1,26 @@
-{% extends "account/base.html" %}
+{% extends "base-nav.html" %}
 
 {% load i18n %}
 
 {% block head_title %}{% trans "Signup" %}{% endblock %}
 
 {% block content %}
+<div class="row main-content">
+<div class="col-md-6 offset-md-3 channel-content">
 <h1>{% trans "Sign Up" %}</h1>
 
-<p>{% blocktrans %}Already have an account? Then please <a href="{{ login_url }}">sign in</a>.{% endblocktrans %}</p>
+<p>{% blocktrans %}Already have an account? Then please <a href="{{ login_url }}">log in</a>.{% endblocktrans %}</p>
 
 <form class="signup" id="signup_form" method="post" action="{% url 'account_signup' %}">
   {% csrf_token %}
   {{ form.as_p }}
+  <br>
   {% if redirect_field_value %}
   <input type="hidden" name="{{ redirect_field_name }}" value="{{ redirect_field_value }}" />
   {% endif %}
-  <button type="submit">{% trans "Sign Up" %} &raquo;</button>
+  <button class="btn btn-outline-success button" type="submit">{% trans "Sign Up" %}</button>
 </form>
+</div>
+</div>
 
 {% endblock %}
