--- a/static/css/style.css
+++ b/static/css/style.css
@@ -94,6 +94,11 @@
     color: cyan;
 }
 
+.channel-content a{
+    text-decoration: none;
+    color: cyan;
+}
+
 .main-content-headline{
     background-color: rgb(57, 57, 57);
     border-top-right-radius: 10px;
