--- a/slackbook_user/templates/base/topics-index.html
+++ b/slackbook_user/templates/base/topics-index.html
@@ -17,7 +17,7 @@
                 </div>
             {% endfor %}
             <br>
-            <button class="btn btn-primary dropdown-toggle btn-outline-success button">more</button>
+            <a class="btn btn-outline-success button" href="{% url 'topics' %}">more</a>
         </div>
     </div>
 </div>
