add style for delete.html

--- a/slackbook_user/templates/base/account-index.html
+++ b/slackbook_user/templates/base/account-index.html
@@ -84,7 +84,7 @@
             <br>
             {% if request.user == topic.host %}
                 <a href="{% url 'update-channel' topic.id %}">Edit</a>
-                <a href="{% url 'delete-channel' topic.id %}">Delete</a>
+                <a href="{% url 'update-channel' topic.id %}">Edit</a>
             {% endif %}
             {% for comment in comments %}
                 {% if comment.channel.title == topic.title %}
