--- a/slackbook_user/templates/base/account-index.html
+++ b/slackbook_user/templates/base/account-index.html
@@ -83,7 +83,7 @@
             <!-- loggedIn: {{ topic.host.loggedin }} -->
             <br>
             {% if request.user == topic.host %}
-                <a href="{% url 'update-channel' topic.id %}">Edit</a>
+                <a href="{% url 'delete-channel' topic.id %}">Delete</a>
                 <a href="{% url 'update-channel' topic.id %}">Edit</a>
             {% endif %}
             {% for comment in comments %}
