--- a/slackbook_user/templates/base/channel.html
+++ b/slackbook_user/templates/base/channel.html
@@ -2,91 +2,132 @@
 
 {% block content %}
 <div class="container">
-  <div class="row justify-content-center">
-    <div class="col-4 main-channel-content">
+    <div class="row justify-content-center">
+        <div class="col-4 main-channel-content">
 
-      <div>  
-        <h2 class="channel-headline">{{ channel.title }}</h2>
-        {% if request.user == channel.host %}
-        <small class="main-content">
-          <a href="{% url 'update-channel' channel.id %}"><i class="fas fa-edit"></i></a>
-          <a href="{% url 'delete-channel' channel.id %}"><i class="fas fa-trash-alt"></i></a>
-        </small>
-        {% endif %}
-        hosted by: <i class="fas fa-user"></i>{{channel.host.username}} - Created: {{channel.created_on|timesince}}
-      </div>
+            {% if channel.private == False %}
+            <div>
+                <h2 class="channel-headline">{{ channel.title }}</h2>
+                {% if request.user == channel.host %}
+                <small class="main-content">
+                    <a href="{% url 'update-channel' channel.id %}"><i class="fas fa-edit"></i></a>
+                    <a href="{% url 'delete-channel' channel.id %}"><i class="fas fa-trash-alt"></i></a>
+                </small>
+                {% endif %}
+                Hosted by:
+                {% if channel.host.avatar.url == 'https://res.cloudinary.com/ddigiimwd/image/upload/v1/images/avatar.svg' %}
+                <img class="user-image" src="/static/images/avatar.png" alt="logo">
+                {% else %}
+                <img class="user-image" src="{{ channel.host.avatar.url }}" alt="user-image">
+                {% endif %}{{channel.host.username}} - Created: {{channel.created_on|timesince}}
+            </div>
 
-      <span>{{ channel.topic }}</span>
-        <hr>
-        <div class="channel-content">
-            <h3>Disscussion</h3>
-            {{ channel.content }}
+            <span>{{ channel.topic }}</span>
             <hr>
-            {% for post in posts %}
+            <div class="channel-content">
+                <h3>Disscussion</h3>
+                {{ channel.content }}
+                <hr>
+                {% for post in objects %}
+                
                 <div>
-                    <small><a href="{% url 'account' post.user.id %}">@{{ post.user.username }}</a> - {{ post.created_on|timesince }} ago</small>
+                    <h5 {% url 'channel' post.channel.id %}?s={{post.title}}>{{post.title}}</h5>
+                    <small><a href="{% url 'account' post.user.id %}">@{{ post.user.username }}</a> -
+                        {{ post.created_on|timesince }} ago</small>
                     <!-- timesince replace the date and the time -->
                     <p>Comment: {{ post.body }}</p>
                     {% if post.image %}
-                        <img class="post-image" src="{{ post.image.url }}" alt="post-image">
+                    <img class="post-image" src="{{ post.image.url }}" alt="post-image">
                     {% endif %}
                     {% if request.user == post.user%}
-                        <a href="{% url 'delete-comment' post.id %}"><button class="btn btn-outline-success button">X</button></a>
+                    <a href="{% url 'delete-comment' post.id %}"><button
+                            class="btn btn-outline-success button">X</button></a>
                     {% endif %}
-                    <hr>  
+                    <hr>
                 </div>
-            {% endfor%}
-        
+                {% endfor%}
 
-          {% if request.user.is_authenticated %}
-          <!-- <div class="post-form">
+
+                {% if request.user.is_authenticated %}
+                <!-- <div class="post-form">
               <form action="" method="POST" enctype="multipart/form-data">
                   {% csrf_token %}
                   <input type="text" placeholder="Place your Comment..." name="body">    -->
-                  <!-- <input type="image" placeholder="Image..." name="image">   
+                <!-- <input type="image" placeholder="Image..." name="image">   
                   <input type="file" placeholder="Image..." name="image">   
                   <input type="submit" value="Submit"> -->
-              <!-- </form>
+                <!-- </form>
           </div>
           <hr> -->
 
-          <form action="" method="POST" enctype="multipart/form-data">
-            <!-- with enctype="multipart/form-data" we can submit files not just content/text -->
-            {% csrf_token %}
-            <h6><small>Your contribution:</small></h6>
-            {% for field in post_form %}
-                <div>
-                    <!-- <label for="post-field" name="">{{field.label}}</label> -->
-                    <div>{{ field }}</div>
-                </div>        
-                {% endfor %}
-                <br>
-                <input class="btn btn-outline-success button" type="submit" value="Submit">
-            </form>
-          <hr>
+                <form action="" method="POST" enctype="multipart/form-data">
+                    <!-- with enctype="multipart/form-data" we can submit files not just content/text -->
+                    {% csrf_token %}
+                    <h6><small>Your contribution:</small></h6>
+                    {% for field in post_form %}
+                    <div>
+                        <!-- <label for="post-field" name="">{{field.label}}</label> -->
+                        <div>{{ field }}</div>
+                    </div>
+                    {% endfor %}
+                    <br>
+                    <input class="btn btn-outline-success button" type="submit" value="Submit">
+                </form>
+                <hr>
 
-          {% endif %}
-      </div>
-    </div>
-    
-    <div class="col-4 main-channel-content">
-        <div>  
-            <h2 class="channel-headline">Who is there? ({{guests.count}} joined)</h2>
-        <div class="channel-content">
-            {% for guest in guests %}
-                <div>
-                    {% if guest.avatar.url == 'https://res.cloudinary.com/ddigiimwd/image/upload/v1/images/avatar.svg' %}
-                        <img class="user-image" src="/static/images/avatar.png" alt="logo"><a href="{% url 'account' guest.id %}"> @{{ guest.username }}</a>
-                    {% else %}
-                        <img class="user-image" src="{{ guest.avatar.url }}" alt="user-image"><a href="{% url 'account' guest.id %}"> @{{ guest.username }}</a>
+                {% endif %}
+            </div>
+        </div>
+
+        <div class="col-4 main-channel-content">
+            <div>
+                <h2 class="channel-headline">Who is there? ({{guests.count}} joined)</h2>
+                <div class="channel-content">
+                    {% for guest in guests %}
+                    <div>
+                        {% if guest.avatar.url == 'https://res.cloudinary.com/ddigiimwd/image/upload/v1/images/avatar.svg' %}
+                        <img class="user-image" src="/static/images/avatar.png" alt="logo"><a
+                            href="{% url 'account' guest.id %}"> @{{ guest.username }}</a>
+                        {% else %}
+                        <img class="user-image" src="{{ guest.avatar.url }}" alt="user-image"><a
+                            href="{% url 'account' guest.id %}"> @{{ guest.username }}</a>
                         <!-- <p>{{guest.avatar.url}}<a href="{% url 'account' guest.id %}"> @{{ guest.username }}</p></a> -->
-                    {% endif %}
+                        {% endif %}
+                    </div>
+                    <br>
+                    {% endfor %}
                 </div>
-                <br>
-            {% endfor %}
+
+                {% else %}
+                <div>
+                    <h2> This is a private Channel. You need to ask the host for access.</h2>
+                    <div class="channel-content">
+                        Hosted by: 
+                        {% if channel.host.avatar.url == 'https://res.cloudinary.com/ddigiimwd/image/upload/v1/images/avatar.svg' %}
+                        <img class="user-image" src="/static/images/avatar.png" alt="logo">
+                        {% else %}
+                        <img class="user-image" src="{{ channel.host.avatar.url }}" alt="user-image">
+                        {% endif %}<a href="{% url 'account' channel.host.id %}">{{channel.host.username}}</a>   
+                        <br>
+                        <!-- {% if request.user == user %}
+                            <div class="dropdown">
+                                <button class="btn btn-secondary dropdown-toggle" type="button" id="dropdownMenuButton" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+                                    <i class="fas fa-envelope"></i>
+                                </button>
+                                <div class="dropdown-menu" aria-labelledby="dropdownMenuButton">
+                                {% for conversation in chat %}
+                                    {% if conversation.host == user %}
+                                    <a class="dropdown-item" href="{% url 'chat' conversation.id %}">{{conversation}}</a>
+                                    {% endif %}
+                                {% endfor %}
+                                </div>
+                            </div>
+                        {% endif %} -->
+                    </div>
+                </div>
+                {% endif %}
+            </div>
         </div>
     </div>
-  </div>
-</div>
-      
-{% endblock %}
+
+    {% endblock %}
